--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "string.h": "c",
-        "graded_test.h": "c"
-    }
+        "graded_test.h": "c",
+        "fcntl.h": "c"
+    },
+    "C_Cpp.dimInactiveRegions": false
 }
