--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ SRCS = syscall.c \
        io/open.c io/close.c io/read_write.c \
        io/lseek.c io/truncate.c io/ftruncate.c \
        errno.c io/puts.c \
-       process/nanosleep.c \
+       process/nanosleep.c process/sleep.c \
        crt/__libc_start_main.c
 
 # TODO: Add sleep.c and puts.c dependency.
